tests/compile-fail/salsa_value_invalid_field_attributes.rs
#[derive(salsa::SalsaValue)]
struct Duplicate {
    #[salsa_value(unsafe(prove_safe_to_retain_manually))]
    #[salsa_value(unsafe(prove_safe_to_retain_manually))]
    field: String,
}

#[derive(salsa::SalsaValue)]
struct Malformed {
    #[salsa_value(prove_safe_to_retain_manually)]
    field: String,
}

#[derive(salsa::SalsaValue)]
struct MissingUnsafe<T> {
    #[salsa_value(prove(T: salsa::SalsaValue))]
    field: T,
}

#[derive(salsa::SalsaValue)]
struct EmptyProof<T> {
    #[salsa_value(unsafe(prove()))]
    field: T,
}

#[derive(salsa::SalsaValue)]
struct MalformedPredicate<T> {
    #[salsa_value(unsafe(prove(T salsa::SalsaValue)))]
    field: T,
}

#[salsa::input]
struct Disallowed {
    #[salsa_value(unsafe(prove_safe_to_retain_manually))]
    field: String,
}

#[salsa::input]
struct ConditionalDisallowed {
    #[salsa_value(unsafe(prove(String: salsa::SalsaValue)))]
    field: String,
}

#[salsa::interned(unsafe(no_lifetime), revisions = usize::MAX)]
struct ConditionalInterned {
    #[salsa_value(unsafe(prove(String: salsa::SalsaValue)))]
    field: String,
}

#[salsa::tracked]
struct ConditionalTracked<'db> {
    #[salsa_value(unsafe(prove(
        std::marker::PhantomData<&'db ()>: salsa::SalsaValue
    )))]
    field: std::marker::PhantomData<&'db ()>,
}

fn main() {}
